# crazyflie-firmware

./: .gitignore  .gitmodules  Kconfig  documentation.md
cache/: 83206E42.json  8945564B.json  F7DFD2A3.json
configs/: sitl_defconfig
sitl_make/: CMakeLists.txt  log_param_linker.ld
sitl_make/cmake/: sitl_gazebo.cmake
src/: Kbuild
src/config/: FreeRTOSConfig.h  config.h
src/deck/drivers/src/: locodeck.c  lpsTdoa2Tag.c
src/drivers/interface/: motors.h
src/drivers/src/: i2c_drv.c
src/hal/interface/: sensors_gz.h  socketlink.h
src/hal/src/: Kbuild  sensors.c  sensors_gz.c  socketlink.c  storage.c  usec_time_sitl.c
src/init/: Kbuild  main_sitl.c
src/modules/interface/: crtp.h  log.h  param_logic.h  power_distribution.h
src/modules/interface/kalman_core/: kalman_core.h
src/modules/interface/simulation/: cf_gz_bridge.hpp  cf_gz_bridge_wrapper.h
src/modules/src/: Kbuild  Kconfig  comm.c  comm_sitl.c  commander.c  console.c  crtp.c  crtp_localization_service.c  crtpservice.c  log.c  mem.c  param_logic.c  platformservice.c  power_distribution_flapper.c  power_distribution_quadrotor.c  power_distribution_sitl.c  stabilizer.c  supervisor.c  system.c  system_sitl.c
src/modules/src/controller/: controller_mellinger.c  position_controller_pid.c
src/modules/src/estimator/: estimator.c  estimator_kalman.c  estimator_ukf.c
src/modules/src/kalman_core/: kalman_core.c
src/modules/src/lighthouse/: lighthouse_core.c  lighthouse_position_est.c
src/modules/src/simulation/: cf_gz_bridge.cpp
src/platform/interface/: platform.h  platform_defaults.h  platform_defaults_cf2.h  platform_defaults_sitl.h
src/platform/src/: platform_sitl.c
src/simulation/interface/: cf_gz_bridge.h  cpu_utilization_task.h
src/simulation/src/: cf_gz_bridge.cpp  cpu_utilization_task.c
src/utils/interface/: cf_math.h  cfassert.h  debug.h
src/utils/interface/tdoa/: tdoaEngine.h
src/utils/src/: Kbuild  cfassert.c
tools/simulators/gz/: setup_gz.bash  sitl_multiagent_square.sh  sitl_multiagent_text.sh  sitl_singleagent.sh
tools/simulators/gz/crazyflie_sitl_gz/: .gitignore  CMakeLists.txt
tools/simulators/gz/crazyflie_sitl_gz/include/: CrtpUtils.h  crtp.h  gz_CrazyflieInterface_plugin.h
tools/simulators/gz/crazyflie_sitl_gz/models/crazyflie/: crazyflie.sdf.jinja  model.config  model.sdf
tools/simulators/gz/crazyflie_sitl_gz/msgs/: Actuators.proto  CommandMotorSpeed.proto  ConnectGazeboToRosTopic.proto  ConnectRosToGazeboTopic.proto  Float32.proto  FluidPressure.proto  Groundtruth.proto  Header.proto  Imu.proto  JointState.proto  Lidar.proto  MagneticField.proto  MotorSpeed.proto  NavSatFix.proto  Odometry.proto  OpticalFlow.proto  Point.proto  PointStamped.proto  PoseStamped.proto  PoseWithCovariance.proto  PoseWithCovarianceStamped.proto  RollPitchYawrateThrust.proto  SITLGps.proto  Transform.proto  TransformStamped.proto  TransformStampedWithFrameIds.proto  Twist.proto  TwistStamped.proto  TwistWithCovariance.proto  Vector3dStamped.proto  WindSpeed.proto  Wrench.proto  WrenchStamped.proto  sonarSens.proto
tools/simulators/gz/crazyflie_sitl_gz/src/: gz_CrazyflieInterface_plugin.cpp
tools/simulators/gz/crazyflie_sitl_gz/worlds/: crazyflie_world.sdf  default.sdf
